[gd_scene load_steps=10 format=2]

[ext_resource path="res://actors/Tower.gd" type="Script" id=1]
[ext_resource path="res://assets/monochrome_transparent_packed.png" type="Texture" id=2]
[ext_resource path="res://actors/actorsdie.tres" type="Animation" id=3]
[ext_resource path="res://actors/PigSpawner.tscn" type="PackedScene" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8, 8 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 6, 8 )

[sub_resource type="Animation" id=3]

[sub_resource type="Animation" id=4]
resource_name = "hurt"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Hurtbox:monitorable")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Hurtbox:monitoring")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Hurtbox/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=5]
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Hurtbox:monitoring")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Hurtbox:monitorable")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[node name="Tower" type="KinematicBody2D"]
script = ExtResource( 1 )
incomePerSecond = 100

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 32, 304, 16, 16 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Hurtbox" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
position = Vector2( -1, 0 )
shape = SubResource( 2 )

[node name="AttackCooldown" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/attack = SubResource( 3 )
anims/die = ExtResource( 3 )
anims/hurt = SubResource( 4 )
anims/idle = SubResource( 5 )

[node name="PigSpawner" parent="." instance=ExtResource( 4 )]

[node name="MoneyTimer" type="Timer" parent="."]
autostart = true

[node name="EnemySpawnTimer" type="Timer" parent="."]
wait_time = 3.0
[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]
[connection signal="timeout" from="MoneyTimer" to="." method="_on_MoneyTimer_timeout"]
[connection signal="timeout" from="EnemySpawnTimer" to="." method="_on_EnemySpawnTimer_timeout"]
